k8s/elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: elasticsearch
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms256m -Xmx256m
        - name: cluster.name
          value: efk-cluster
        - name: discovery.type
          value: single-node
        image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
        livenessProbe:
          exec:
            command:
            - curl -f http://localhost:9200 || exit 1
          failureThreshold: 5
          periodSeconds: 30
          timeoutSeconds: 10
        name: elasticsearch
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch-data
      restartPolicy: Always
      volumes:
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elasticsearch-data
status: {}
