k8s/fluentd-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: fluentd
  name: fluentd
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: fluentd
    spec:
      containers:
      - image: fluentd
        livenessProbe:
          exec:
            command:
            - nc -z localhost 24224
          failureThreshold: 5
          periodSeconds: 30
          timeoutSeconds: 10
        name: fluentd
        ports:
        - containerPort: 24224
        - containerPort: 24224
          protocol: UDP
        - containerPort: 9292
        resources: {}
        volumeMounts:
        - mountPath: /fluentd/etc
          name: fluentd-claim0
      restartPolicy: Always
      volumes:
      - name: fluentd-claim0
        persistentVolumeClaim:
          claimName: fluentd-claim0
status: {}
