k8s/elasticsearch-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
  namespace: efk
spec:
  type: ClusterIP
  ports:
  - name: "elasticsearch-rest"
    port: 9200
  - name: "elasticsearch-comms"
    port: 9300
  selector:
    io.kompose.service: elasticsearch
