k8s/fluentd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: fluentd
  name: fluentd
spec:
  ports:
  - name: "24224"
    port: 24224
    targetPort: 24224
  - name: 24224-udp
    port: 24224
    protocol: UDP
    targetPort: 24224
  - name: "9292"
    port: 9292
    targetPort: 9292
  selector:
    io.kompose.service: fluentd
status:
  loadBalancer: {}
