k8s/gluster-ep.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-ep
  namespace: efk
spec:
  ports:
    - port: 1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-ep
  namespace: efk
subsets:
  - addresses:
      - ip: 10.132.0.8
    ports:
      - port: 1
