k8s/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kibana-ing
  namespace: efk
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              serviceName: kibana
              servicePort: 8888
            path: /efk

# more options: https://kubernetes.io/docs/concepts/services-networking/ingress/
